--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<html>
-
-	<head>
-		<title>Coming Soon</title>
-	</head>
-
-	<body>
-		<p>Coming soon</p>
-	</body>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta name="Content-Type" content="text/html; charset=UTF-8" />
+    <title>github :: hans engel</title>
+    <style type="text/css" media="screen">
+      * { margin: 0; padding: 0; }
+      body { font-family: 'Palatino Linotype', Palatino, Georgia, 'Times New Roman', serif; background-color: #fff; overflow: auto; color: #ccc; font-size: 16px; }
+      h1 { font-weight: normal; margin-bottom: 30px; color: #222; font-size: 50px; }
+      a { text-decoration: none; color: #777; }
+        a:hover { color: #444; }
+      img#forkme { position: absolute; top: 0; left: 0; border: 0; }
+      #container { width: 100%; text-align: center; margin: 100px 0; }
+    </style>
+  </head>
+  <body>
+    <a href="http://github.com/csamuel"><img id="forkme" src="http://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
+    <div id="container">
+      <h1>hello.</h1>
+    <a href="http://github.com/csamuel">code</a> | <a href="http://twitter.com/csamuel">tweet</a> | <a href="http://csamuel.github.com">write</a>
+    </div>
+  </body>
 </html>
+
+ <!-- Blatantly stolen from Hans Engel -->
