--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta name="Content-Type" content="text/html; charset=UTF-8" />
-    <title>github :: hans engel</title>
+    <title>github :: chris samuel</title>
     <style type="text/css" media="screen">
       * { margin: 0; padding: 0; }
       body { font-family: 'Palatino Linotype', Palatino, Georgia, 'Times New Roman', serif; background-color: #fff; overflow: auto; color: #ccc; font-size: 16px; }
