Fixe image alignment

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <body>
     <a href="http://github.com/csamuel"><img id="forkme" src="http://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
     <div id="container">
-      <!-- <h1>hello.</h1> -->
-			<img id="hello" src="http://img.skitch.com/20081223-n9h54r34arnisqfei7g8ssthu4.jpg" alt="Hello"/>
+      <h1><img id="hello" src="http://img.skitch.com/20081223-n9h54r34arnisqfei7g8ssthu4.jpg" alt="Hello"/></h1>
     <a href="http://github.com/csamuel">code</a> | <a href="http://twitter.com/csamuel">tweet</a> | <a href="http://csamuel.github.com">write</a>
     </div>
   </body>
