--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <title>github :: chris samuel</title>
     <style type="text/css" media="screen">
       * { margin: 0; padding: 0; }
-      body { font-family: 'Palatino Linotype', Palatino, Georgia, 'Times New Roman', serif; background-color: #fff; overflow: auto; color: #ccc; font-size: 16px; }
-      h1 { font-weight: normal; margin-bottom: 30px; color: #222; font-size: 50px; }
+      body { font-family: 'Helvetica', 'Palatino Linotype', Palatino, Georgia, 'Times New Roman', serif; background-color: #fff; overflow: auto; color: #ccc; font-size: 16px; }
+      h1 { font-weight: normal; margin-bottom: 10px; color: #222; font-size: 50px; }
       a { text-decoration: none; color: #777; }
         a:hover { color: #444; }
       img#forkme { position: absolute; top: 0; left: 0; border: 0; }
-      #container { width: 100%; text-align: center; margin: 100px 0; }
+      #container { width: 100%; text-align: center; margin: 75px 0; }
     </style>
   </head>
   <body>
-    <a href="http://github.com/csamuel"><img id="forkme" src="http://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
     <div id="container">
-      <h1><img id="hello" src="http://img.skitch.com/20081223-n9h54r34arnisqfei7g8ssthu4.jpg" alt="Hello"/></h1>
-    <a href="http://github.com/csamuel">code</a> | <a href="http://twitter.com/csamuel">tweet</a> | <a href="http://csamuel.github.com">write</a>
+      <h1><img id="hello" src="http://img.skitch.com/20081223-xuhw1yd6r9196rwbh3tfsb8h59.jpg" alt="Hello"/></h1>
+    	<a href="http://github.com/csamuel">code</a> | <a href="http://twitter.com/csamuel">tweet</a> | <a href="http://csamuel.github.com">write</a>
     </div>
   </body>
 </html>
-
- <!-- Blatantly stolen from Hans Engel -->
